--- a/docs/stylesheets/colors.css
+++ b/docs/stylesheets/colors.css
@@ -63,23 +63,8 @@
     --ocean-900: #021218;
 
     /* -- Accents -- */
-    --blue-0: #00e3ff;
-    --blue-300: #00bcff;
-    --blue-600: #0084b2;
-    --blue-900: #005c7d;
-    --green-0: #3bff95;
-    --green-300: #31e27b;
-    --green-600: #229e56;
-    --green-900: #186f3c;
-    --purple-0: #da11ff;
-    --purple-300: #a000bc;
-    --purple-600: #700084;
-    --purple-900: #4e005c;
-    --yellow-0: #ffe300;
-    --yellow-300: #ffbc00;
-    --yellow-600: #b28400;
+    --yellow-6: #ffc900;
     --yellow-900: #7d5c00;
-    --red-0: #f03b3a;
-    --red-100: #dc3938;
+    --yellow-600:#b28400;
 
   }
