--- a/docs/stylesheets/colors.css
+++ b/docs/stylesheets/colors.css
@@ -31,40 +31,10 @@
     --white-700: #d3d6d9;
     --white-800: #ccd0d3;
     --white-900: #c6cace;
-
-    /* -- Primary Transparency -- */
-    --black-900-30: #0000004d; /* black-900 with 30% opacity */
-    --black-900-70: #000000b3; /* black-900 with 70% opacity */
-    --white-900-30: #ffffff4d; /* white-900 with 30% opacity */
-    --white-900-70: #ffffffb3; /* white-900 with 70% opacity */
-    --white-900-85: #ffffffd9; /* white-900 with 85% opacity */
-
-    /* -- Secondary -- */
-    --grey-0: #fdfdfd;
-    --grey-100: #eaebed;
-    --grey-200: #d5d8da;
-    --grey-300: #c0c5c9;
-    --grey-400: #abb2b7;
-    --grey-500: #97a0a6;
-    --grey-600: #848e95;
-    --grey-700: #717d84;
-    --grey-800: #5e6c74;
-    --grey-900: #4c5b64;
-    --ocean-0: #acccda;
-    --ocean-0-50: #cfdfe7;
-    --ocean-100: #97bac9;
-    --ocean-200: #82a8b8;
-    --ocean-300: #598395;
-    --ocean-400: #2f5f73;
-    --ocean-500: #063b51;
-    --ocean-600: #052f41;
-    --ocean-700: #042331;
-    --ocean-800: #021820;
-    --ocean-900: #021218;
+    --white-600-50:#B2B2B2;
 
     /* -- Accents -- */
     --yellow-6: #ffc900;
     --yellow-900: #7d5c00;
     --yellow-600:#b28400;
-
   }
