--- a/docs/stylesheets/themes.css
+++ b/docs/stylesheets/themes.css
@@ -4,6 +4,13 @@
     --md-default-fg-color: var(--black-900);
     --block-code-bg-color: var(--white-400);
     --block-code-font-color: var(--black-900);
+    --cards-section-bg-color: var(--white-100);
+    --card-bg-color: var(--white-0);
+    --card-border-color: var(--white-400);
+    --welcome-page-bg-color: var(--white-0);
+    --card-title-color: var(--black-700);
+    --card-description-color: var(--black-200);
+    --icon-fill-color: var(--black-200);
 }
 
 /* Dark Theme */
@@ -12,4 +19,11 @@
     --md-default-fg-color: var(--white-100);
     --block-code-bg-color: var(--slate-200);
     --block-code-font-color: var(--white-200);
+    --cards-section-bg-color: var(--slate-900);
+    --card-bg-color: var(--slate-600);
+    --card-border-color: var(--slate-0);
+    --welcome-page-bg-color: var(--slate-600);
+    --card-title-color: var(--white-600);
+    --card-description-color: var(--white-600-50);
+    --icon-fill-color: var(--black-0);
 }
