--- a/docs/stylesheets/globals.css
+++ b/docs/stylesheets/globals.css
@@ -18,6 +18,42 @@ body {
     color: var(--md-default-fg-color);
 }
 
+h1 {
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    color: var(--text-color);
+}
+
+h2 {
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    color: var(--text-color);
+}
+
+h3 {
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    color: var(--text-color);
+}
+
+p {
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    color: var(--text-color);
+}
+
 .md-typeset h1 {
     color: var(--md-default-fg-color);
 }
