--- a/docs/stylesheets/welcome.css
+++ b/docs/stylesheets/welcome.css
@@ -163,7 +163,7 @@ body {
 .cards-section-wrapper {
     background-color: var(--cards-section-bg-color);
     width: 100%;
-    margin-top: 48px;
+    padding-top: 48px;
 }
 
 .cards-section-wrapper section {
