--- a/docs/stylesheets/themes.css
+++ b/docs/stylesheets/themes.css
@@ -9,8 +9,8 @@
     --card-border-color: var(--white-400);
     --welcome-page-bg-color: var(--white-0);
     --icon-fill-color: var(--black-200);
-    --text-secondary-color: var(--black-700);
-    --text-primary-color: var(--black-200);
+    --text-secondary-color: var(--black-200);
+    --text-primary-color: var(--black-700);
     --footer-text-color: var(--black-0);
     --primary-sidebar-bg-color: var(--white-100);
     --active-link-bg-color: var(--white-0);
@@ -27,8 +27,8 @@
     --card-border-color: var(--slate-0);
     --welcome-page-bg-color: var(--slate-600);
     --icon-fill-color: var(--black-0);
-    --text-secondary-color: var(--white-600);
-    --text-primary-color: var(--white-600-50);
+    --text-secondary-color: var(--white-600-50);
+    --text-primary-color: var(--white-600);
     --footer-text-color: var(--black-200);
     --primary-sidebar-bg-color: var(--slate-600);
     --active-link-bg-color: var(--slate-200);
