--- a/docs/stylesheets/globals.css
+++ b/docs/stylesheets/globals.css
@@ -15,34 +15,39 @@ html {
 /* Apply the variables to elements */
 body {
     background-color: var(--md-default-bg-color);
-    color: var(--md-default-fg-color);
 }
 
-h1 {
+h1, 
+.md-typeset h1 {
     font-family: Inter;
     font-size: 32px;
     font-style: normal;
     font-weight: 400;
     line-height: 40px;
-    color: var(--text-secondary-color);
+    color: var(--text-primary-color);
+    margin-bottom: 32px;
 }
 
-h2 {
+h2, 
+.md-typeset h2 {
     font-family: Inter;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: 32px;
-    color: var(--text-secondary-color);
+    color: var(--text-primary-color);
+    margin: 32px 0 24px 0;
 }
 
-h3 {
+h3,
+.md-typeset h3 {
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
-    color: var(--text-secondary-color);
+    color: var(--text-primary-color);
+    margin: 24px 0 12px 0;
 }
 
 p {
@@ -51,11 +56,17 @@ p {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    color: var(--text-secondary-color);
+    color: var(--text-primary-color);
 }
 
-.md-typeset h1 {
-    color: var(--md-default-fg-color);
+.md-typeset a {
+    color: inherit;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
+
+.md-footer {
+    display: none;
 }
 
 .md-header {
