include custom footer for each page
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/docs/stylesheets/globals.css
+++ b/docs/stylesheets/globals.css
@@ -78,7 +78,8 @@ p {
 }
 
 .md-footer {
-    display: none;
+    background-color: var(--md-default-bg-color);
+    color: var(--text-secondary-color);
 }
 
 .md-header {
